@@ -2,6 +2,8 @@
  - fix: twisted error message upon SHA-256 upload verification (#73)
  - fix: user_show raised unexpected APINotFoundError in wizard
  - fix: support None as empty API key
+ - fix: explain to user how to create API token, since CKAN 2.10 does
+   not support automatic generation of API keys anymore
  - enh: add ``__repr__`` for ``CKANAPI``
  - ref: introduce `CKANAPI.ckan_version_object` fetching the CKAN version
 0.12.8:
